--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,11 @@ body {
     /*overflow: hidden;*/
     color: #fff;
 }
+.well {
+  margin: 12px;
+  border: 2px solid black;
+  color: #000;
+}
 .day {
   float: left;
   background-color: #f0f5f5;
@@ -29,24 +34,31 @@ body {
   padding: 12px;
 }
 .thumbnail {
+  display: block;
+  margin: auto;
   margin-bottom: 20px;
   border: 1px solid #004d3b;
   border-radius: 12px;
-  padding: 5px;
-  width: 125px;
+  width: 140px;
+  height: 150px;
+}
+img.thumbnail:hover {
+    box-shadow: 0 0 px 1px rgba(0, 140, 186, 0.5);
+}
+.wiki-thumbnail {
+  width: 120;
   height: 150px;
 }
 button {
   margin: 5px 16px 5px;
 }
-.wiki-thumbnail {
-  display: block;
-  margin: auto;
-}
 #wikipedia-project {
   text-align: center;
 }
-h4 {
+.panel-body .project {
+  height: 620px;
+}
+h4.day4-2 {
   text-align: center;
   font-weight: bold;
   text-decoration: underline;
@@ -55,7 +67,9 @@ h4 {
 .project {
   text-align: center;
 }
-.lang-list {
+ul {
+  /*text-align: center;
+  display: inline-block;*/
   list-style-type: none;
 }
 #about-me {
