--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,15 @@
+
+
 body {
   background-color: #00cc99;
+}
+.nav {
+  background-color: #00cc99;
+  padding-top: 5px;
+  padding-left: 10px;
+  z-index: 100;
+  position: fixed;
+  width: 100%
 }
 .jumbotron {
     position: top;
@@ -22,7 +32,7 @@ body {
   padding: 8px 8px 8px 8px;
   border-radius: 8px;
   border: 2px solid black;
-  font-family: sans-serif;
+  /*font-family: sans-serif;*/
   color: #000;
 }
 .weekday {
@@ -43,7 +53,7 @@ body {
   height: 150px;
 }
 img.thumbnail:hover {
-    box-shadow: 0 0 px 1px rgba(0, 140, 186, 0.5);
+    box-shadow: 0 0 px 1px pink(0, 140, 186, 0.5);
 }
 .wiki-thumbnail {
   width: 120;
@@ -93,3 +103,4 @@ ul {
   font-weight: bold;
   font-size: 20px;
 }
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans')
